# catbot

./: .gitignore  CMakeLists.txt  README.md  catbot.h  catmessage.cpp  commands.cpp  main.cpp  millipic.cpp
tools/: version.sh
